# daily-log

./: .gitignore  README.md  pyproject.toml
app/: main.py
db/: connect.py  connection.py  database.py  initialization.py  models.py  operations.py
frontend/: index.html  script.js  styles.css
